# old-crypto-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
benches/: ciphers.rs  shuffle.rs
cmd/old-crypto/: main.rs
examples/: demo.rs
src/: adfgvx.rs  caesar.rs  chaocipher.rs  helpers.rs  lib.rs  nihilist.rs  null.rs  playfair.rs  sigaba.rs  solitaire.rs  square.rs  straddling.rs  transposition.rs  vic.rs  wheatstone.rs
src/cmd/old-crypto/: main.rs
